Add userId field to n8n webhook requests and implement two-account system
- Added userId field to N8nRequest interface and all webhook calls
- Implemented chatbot-admin@tecace.com (admin) and chatbot-user@tecace.com (user) accounts
- Added role-based access control - only admin can access settings
- Fixed admin account routing to go to chat interface instead of dashboard
- Added comprehensive error detection for n8n webhook error messages
- Updated authentication system to handle different user roles
- Fixed various UI issues and improved error handling
- Added Korean translations for new UI elements

--- a/apps/professor/test-n8n.html
+++ b/apps/professor/test-n8n.html
@@ -40,6 +40,7 @@
 
             const requestBody = [{
                 sessionId: 'debug-session',
+                userId: 'test-user-123',
                 action: 'sendMessage',
                 chatInput: testMessage
             }];
