Fix n8n webhook API format - change from array to object
- Changed request body from [{...}] to {...} to match new n8n API format
- Updated sendToN8n function to send object instead of array
- Updated testN8nConnection to use new format
- Updated test-n8n.html to use new format
- Response parsing already handles both array and object formats

--- a/apps/professor/test-n8n.html
+++ b/apps/professor/test-n8n.html
@@ -38,12 +38,12 @@
             responseOutput.textContent = 'Sending...';
             responseOutput.className = '';
 
-            const requestBody = [{
+            const requestBody = {
                 sessionId: 'debug-session',
                 userId: 'test-user-123',
                 action: 'sendMessage',
                 chatInput: testMessage
-            }];
+            };
 
             try {
                 const controller = new AbortController();
