Add chatId field to n8n webhook requests
- Update N8nRequest interface to include chatId field
- Generate unique chatId for each message (for future feedback API)
- Update test connection to include chatId
- Update test-n8n.html to include chatId in test requests
- chatId format: chat_<timestamp>_<random_string>

Example request body:
{
  "sessionId": "session-123",
  "chatId": "chat_1234567890_abc123",
  "userId": "user-456",
  "action": "sendMessage",
  "chatInput": "What is the PSDAP program?"
}

--- a/apps/professor/test-n8n.html
+++ b/apps/professor/test-n8n.html
@@ -40,6 +40,7 @@
 
             const requestBody = {
                 sessionId: 'debug-session',
+                chatId: 'debug-chat-' + Date.now(),
                 userId: 'test-user-123',
                 action: 'sendMessage',
                 chatInput: testMessage
